--- a/src/styles/helpers/_fonts.scss
+++ b/src/styles/helpers/_fonts.scss
@@ -2,3 +2,8 @@
 //     font-family: LeagueGothic;
 //     src: url(../fonts/LeagueGothic_Condensed-Regular.ttf) format('truetype');
 // }
+
+@font-face {
+    font-family: Montserrat Regular;
+    src: url(../assets/fonts/Montserrat-Regular.ttf) format('truetype');
+}
