--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -83,7 +83,7 @@
 
                         @media screen and (max-width: 769px) {
                             
-                            padding: 5px;
+                            padding: 5px 10px;
 
                             animation-duration: 1.5s;
                             animation-name: showTextNav;
@@ -100,6 +100,10 @@
 
                             &:hover {
                                 color: red;
+                            }
+
+                            @media screen and (max-width: 769px) {
+                                font-size: 24px;
                             }
                         }
                     }
