--- a/src/styles/helpers/_fonts.scss
+++ b/src/styles/helpers/_fonts.scss
@@ -7,3 +7,11 @@
     font-family: Montserrat Regular;
     src: url(../assets/fonts/Montserrat-Regular.ttf) format('truetype');
 }
+@font-face {
+    font-family: CrimsonText Regular;
+    src: url(../assets/fonts/Montserrat-Regular.ttf) format('truetype');
+}
+@font-face {
+    font-family: Amsdam;
+    src: url(../assets/fonts/Anton-Regular.ttf) format('truetype');
+}
