--- a/src/styles/components/aboutUs.scss
+++ b/src/styles/components/aboutUs.scss
@@ -89,4 +89,82 @@ main {
             }
         }
     }
+    .result{
+        margin-top: 40px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+
+        @media screen and (max-width: 1200px) {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            gap: 10px;
+        }
+
+        @media screen and (max-width: 769px) {
+            grid-template-columns: 1fr;
+            margin-top: 20px;
+        }
+
+        .resultBlock{
+            padding:  0 80px; 
+            display: grid;
+            justify-items: center;
+
+            text-align: center;
+
+            border-right: 1px solid #b0b0b0;
+            &:last-child{
+                border-right: 0;
+
+                @media screen and (max-width: 1200px) {
+                    border: 1px solid #b0b0b0;
+                }
+            }
+
+            @media screen and (max-width: 1200px) {
+                border: 1px solid #b0b0b0;
+                padding: 0;
+
+            }
+
+            .resultBlock__img{
+                padding-top: 20px;
+
+                img{
+                    width: 50px;
+                    height: 50px;
+
+                    @media screen and (max-width: 769px) {
+                        width: 25px;
+                        height: 25px;
+                    }
+                }
+            }
+
+            .resultBlock__title{
+                margin: 20px 0 30px 0;
+                width: 100px;
+
+                font-family: Montserrat Regular, sans-serif;
+                text-transform: uppercase;
+                font-size: 13px;
+                color: $aboutTextColor;
+
+                @media screen and (max-width: 769px) {
+                    margin: 10px 0 15px 0;
+                }
+            }
+
+            .resultBlock__text{
+                font-size: 54px;
+                font-family: Montserrat Regular, sans-serif;
+                text-transform: uppercase;
+                color: $aboutTextColor;
+
+                @media screen and (max-width: 769px) {
+                    font-size: 30px;
+                }
+            }
+        }
+    }
 }
