--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,5 +1,7 @@
 @import './../helpers/extends';
 @import './../helpers/global';
+@import './../helpers/fonts';
+
 
 .sliderBody {
     position: relative;
