--- a/src/styles/components/aboutUs.scss
+++ b/src/styles/components/aboutUs.scss
@@ -90,7 +90,7 @@ main {
         }
     }
     .result{
-        margin-top: 40px;
+        margin: 40px 0 ;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
 
@@ -102,7 +102,7 @@ main {
 
         @media screen and (max-width: 769px) {
             grid-template-columns: 1fr;
-            margin-top: 20px;
+            margin-top: 20px 0 ;
         }
 
         .resultBlock{
